Revert "MOSIP-41753- Added Vm argument in entrypoint.sh file to run packet creator jar"